--- a/Gallery.html
+++ b/Gallery.html
@@ -49,31 +49,31 @@
             if (selectedValue === 'Parish Images') {
                 imagesHTML = `
                     <figure>
-                        <img src="Images/_DSC7216.png" alt="Parish Image 1">
+                        <img src="Images/_DSC7216.png" alt="">
                         <figcaption>Parish Image 1</figcaption>
                     </figure>
                     <figure>
-                        <img src="Images/_DSC7217.png" alt="Parish Image 2">
+                        <img src="Images/_DSC7217.png" alt="">
                         <figcaption>Parish Image 2</figcaption>
                     </figure>
                     <figure>
-                        <img src="Images/_DSC7226.png" alt="Parish Image 3">
+                        <img src="Images/_DSC7226.png" alt="">
                         <figcaption>Parish Image 3</figcaption>
                     </figure>
                     <figure>
-                        <img src="Images/_DSC7229.png" alt="Parish Image 4">
+                        <img src="Images/_DSC7229.png" alt="">
                         <figcaption>Parish Image 4</figcaption>
                     </figure>
                     <figure>
-                        <img src="Images/_DSC7250.png" alt="Parish Image 5">
+                        <img src="Images/_DSC7250.png" alt="">
                         <figcaption>Parish Image 5</figcaption>
                     </figure>
                     <figure>
-                        <img src="Images/_DSC7254.png" alt="Parish Image 6">
+                        <img src="Images/_DSC7254.png" alt="">
                         <figcaption>Parish Image 6</figcaption>
                     </figure>
                     <figure>
-                        <img src="Images/_DSC7261.png" alt="Parish Image 7">
+                        <img src="Images/_DSC7261.png" alt="">
                         <figcaption>Parish Image 7</figcaption>
                     </figure>
                 `;
